--- a/src/components/Footer/styles/footer.css
+++ b/src/components/Footer/styles/footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-image: url(../../../assets/backgroundfooter.svg);
+  background-image: url(https://i.im.ge/2023/10/06/PonHND.priberam-machine-learning-lunch-seminar-joao-xavier-1-1.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
