--- a/src/routes/Inicio/styles/valores.css
+++ b/src/routes/Inicio/styles/valores.css
@@ -3,15 +3,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 30px 0;
+  padding: 30px 30px;
   background-color: #fbfbfb;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.sectionValores .valoresTitle {
-  font-size: 25px;
+.sectionValores .valoresTitle h2 {
+  font-size: 40px;
   letter-spacing: 2px;
 }
 
@@ -26,8 +26,8 @@
 }
 
 .card {
-  width: 350px;
-  height: 400px;
+  width: 300px;
+  height: 360px;
   background-color: #fff;
   padding: 30px 30px;
   border: solid 1px #dfdfdf;
@@ -41,6 +41,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.card .imageCard img {
+  width: 130px;
+  height: 130px;
 }
 
 .card h3 {
