--- a/src/routes/Inicio/styles/depoimentos.css
+++ b/src/routes/Inicio/styles/depoimentos.css
@@ -1,11 +1,11 @@
 .depoimentos {
   background-color: #fbfbfb;
-  padding: 50px 20px;
+  padding: 30px 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 40px;
+  gap: 30px;
 }
 
 .titleDepoimentos h2 {
@@ -16,7 +16,7 @@
 .depoimentosContent {
   width: 1220px;
   display: flex;
-  gap: 30px;
+  gap: 40px;
 }
 
 .depoimentosContent .cardDepoimento {
@@ -26,9 +26,9 @@
   padding: 40px 30px;
   border: solid 1px #dfdfdf;
   border-radius: 8px;
-  -webkit-box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.26);
-  -moz-box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.26);
-  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.26);
+  -webkit-box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.16);
+  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.16);
 }
 
 .cardDepoimento .sectionHeader {
@@ -41,6 +41,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.cardDepoimento .sectionHeader .imageDepoimento img {
+  border-radius: 999px;
+  width: 70px;
+  -webkit-box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.16);
+  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.16);
 }
 .cardDepoimento .sectionHeader .sectionNome {
   display: flex;
