--- a/src/routes/Inicio/styles/about.css
+++ b/src/routes/Inicio/styles/about.css
@@ -54,3 +54,29 @@
   font-weight: 600;
   font-size: 20px;
 }
+
+@media (max-width: 780px) {
+  .about {
+    margin: 50px 50px;
+  }
+
+  .aboutContent {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 0px;
+  }
+
+  .sectionOne img {
+    display: none;
+  }
+
+  .aboutTwo h2 {
+    font-size: 30px;
+  }
+
+  .aboutTwo p {
+    font-size: 20px;
+  }
+}
