--- a/src/routes/Inicio/styles/valores.css
+++ b/src/routes/Inicio/styles/valores.css
@@ -55,3 +55,76 @@
 .card p {
   font-size: 18px;
 }
+
+@media (max-width: 780px) {
+  .sectionValores {
+    padding: 30px 50px;
+  }
+
+  .sectionCard {
+    gap: 60px;
+    margin: 40px 50px;
+    flex-direction: column;
+  }
+
+  .card {
+    width: 500px;
+    height: 300px;
+    padding: 30px 30px;
+  }
+
+  .valoresTitle h2 {
+    font-size: 35px;
+  }
+  .valoresSubtitle {
+    font-size: 20px;
+  }
+
+  .card .imageCard img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .card h3 {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .card p {
+    font-size: 20px;
+  }
+}
+@media (max-width: 700px) {
+  .sectionCard {
+    gap: 40px;
+    padding: 40px 50px;
+    flex-direction: column;
+  }
+
+  .card {
+    width: 400px;
+    height: 310px;
+    padding: 30px 30px;
+  }
+
+  .valoresTitle h2 {
+    font-size: 35px;
+  }
+  .valoresSubtitle {
+    font-size: 20px;
+  }
+
+  .card .imageCard img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .card h3 {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .card p {
+    font-size: 20px;
+  }
+}
