--- a/src/routes/Inicio/styles/services.css
+++ b/src/routes/Inicio/styles/services.css
@@ -74,7 +74,7 @@
   }
 
   .titleServices h2 {
-    font-size: 35px;
+    font-size: 32px;
     width: 500px;
   }
 
@@ -89,7 +89,7 @@
   }
 
   .descriptVideo p {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .buttonForm {
@@ -100,7 +100,7 @@
   }
 
   .buttonForm a {
-    font-size: 22px;
+    font-size: 20px;
   }
 }
 
@@ -133,5 +133,44 @@
 
   .buttonForm a {
     font-size: 22px;
+  }
+}
+@media (max-width: 630px) {
+  .sectionServices {
+    margin: 50px 50px;
+  }
+
+  .servicesContent {
+    gap: 40px;
+  }
+
+  .titleServices h2 {
+    font-size: 27px;
+    width: 500px;
+  }
+
+  .videoServices iframe {
+    width: 400px;
+    height: 225px;
+  }
+
+  .descriptVideo {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .descriptVideo p {
+    font-size: 16px;
+  }
+
+  .buttonForm {
+    margin-top: 10px;
+    width: 350px;
+    padding: 5px 10px;
+    border-radius: 8px;
+  }
+
+  .buttonForm a {
+    font-size: 18px;
   }
 }
