--- a/src/components/Faq/style/faq.css
+++ b/src/components/Faq/style/faq.css
@@ -81,4 +81,77 @@
 }
 
 @media (max-width: 700px) {
+  .faqBackground {
+    padding: 50px 50px 70px 50px;
+    gap: 50px;
+  }
+
+  .faq {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .faq section {
+    gap: 30px;
+  }
+
+  .titleFaq h2 {
+    font-weight: 500;
+    font-size: 25px;
+    text-align: center;
+    width: 100%;
+  }
+
+  .faq summary {
+    font-size: 18px;
+  }
+  .faq summary:hover {
+    color: #11a65f;
+  }
+
+  .faq p {
+    margin: 10px 0 10px 0;
+    padding: 10px 0 0 0;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 630px) {
+  .faqBackground {
+    padding: 50px 50px 70px 50px;
+    gap: 50px;
+  }
+
+  .faq {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .faq section {
+    gap: 30px;
+  }
+
+  .titleFaq h2 {
+    font-weight: 500;
+    font-size: 23px;
+    text-align: center;
+    width: 100%;
+  }
+
+  .faq summary {
+    font-size: 16px;
+  }
+  .faq summary:hover {
+    color: #11a65f;
+  }
+
+  .faq p {
+    margin: 10px 0 10px 0;
+    padding: 10px 0 0 0;
+    font-size: 16px;
+  }
 }
