--- a/src/components/Form/style/form.css
+++ b/src/components/Form/style/form.css
@@ -127,7 +127,7 @@
   }
 
   .titleForm h2 {
-    font-size: 35px;
+    font-size: 32px;
     width: 100%;
   }
 
@@ -147,7 +147,7 @@
   }
 
   .titleDescript p {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .cardForm {
@@ -175,9 +175,78 @@
   }
 
   .cardForm button {
+    text-transform: capitalize;
     margin-top: 10px;
     width: 100%;
     padding: 15px 10px;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 780px) {
+  .form {
+    padding: 50px 50px;
+    gap: 0px;
+  }
+
+  .formSection {
+    gap: 0px;
+    width: 100%;
+  }
+
+  .titleForm h2 {
+    font-size: 27px;
+    width: 100%;
+  }
+
+  .formContent {
+    gap: 0px;
+    flex-direction: column;
+  }
+
+  .titleDescript {
+    margin: 30px 0 50px 0;
+    gap: 0px;
+    max-width: 100%;
+  }
+
+  .titleDescript h3 {
+    display: none;
+  }
+
+  .titleDescript p {
+    font-size: 16px;
+  }
+
+  .cardForm {
+    padding: 40px 30px;
+    width: 350px;
+  }
+
+  .cardForm form {
+    gap: 25px;
+    height: 600px;
+    padding: 0px 10px;
+  }
+
+  .cardForm input {
+    padding: 15px 15px;
+    font-size: 16px;
+  }
+
+  .cardForm input:focus {
+    border: 2px solid #11a65f;
+  }
+
+  .cardForm input::placeholder {
+    font-size: 16px;
+  }
+
+  .cardForm button {
+    text-transform: capitalize;
+    margin-top: 10px;
+    width: 100%;
+    padding: 10px 10px;
     font-size: 18px;
   }
 }
