--- a/src/routes/Inicio/styles/about.css
+++ b/src/routes/Inicio/styles/about.css
@@ -73,10 +73,45 @@
   }
 
   .aboutTwo h2 {
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .aboutTwo p {
+    font-size: 18px;
+  }
+  .aboutTwo .routeSobre a {
+    color: #fff;
+    font-weight: 600;
     font-size: 20px;
+  }
+}
+@media (max-width: 630px) {
+  .about {
+    margin: 50px 50px;
+  }
+
+  .aboutContent {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 0px;
+  }
+
+  .sectionOne img {
+    display: none;
+  }
+
+  .aboutTwo h2 {
+    font-size: 23px;
+  }
+
+  .aboutTwo p {
+    font-size: 16px;
+  }
+  .aboutTwo .routeSobre a {
+    color: #fff;
+    font-weight: 600;
+    font-size: 18px;
   }
 }
