--- a/src/routes/Inicio/styles/main.css
+++ b/src/routes/Inicio/styles/main.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nothing+You+Could+Do&family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Nothing+You+Could+Do&family=Open+Sans&display=swap");
 
+.icons {
+  font-size: 25px;
+}
+
 .main {
   background-color: black;
   background-image: url(https://i.im.ge/2023/10/04/NzXmmJ.Group-2-2.png);
@@ -65,16 +69,42 @@
   }
 
   .textTitle p {
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
   }
 
   .title h1 {
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .routeAbout a {
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 16px;
+  }
+}
+@media (max-width: 630px) {
+  .icons {
+    font-size: 25px;
+  }
+  .main {
+    padding: 0 50px;
+  }
+
+  .contentMain {
+    height: 350px;
+  }
+
+  .textTitle p {
+    font-size: 17px;
+    text-align: center;
+  }
+
+  .title h1 {
+    font-size: 20px;
+  }
+
+  .routeAbout a {
+    margin-top: 10px;
+    font-size: 15px;
   }
 }
