--- a/src/components/Beneficios/style/beneficios.css
+++ b/src/components/Beneficios/style/beneficios.css
@@ -266,7 +266,7 @@
   /* ESPECIALISTA SECTION STYLE */
 
   .sectionEspecialista {
-    padding: 20px 50px 30px 50px;
+    padding: 0px 50px 30px 50px;
     gap: 0px;
     width: 100%;
   }
@@ -289,5 +289,71 @@
   }
   .buttonEspecialista a {
     font-size: 18px;
+  }
+}
+
+@media (max-width: 520px) {
+  .beneficios {
+    padding: 30px 50px;
+  }
+
+  .titleBeneficios h2 {
+    font-size: 23px;
+    width: 100%;
+  }
+
+  .beneficiosSection {
+    width: 100%;
+  }
+
+  /* CARD SECTION STYLE */
+  .sectionCard {
+    gap: 40px;
+    width: 100%;
+  }
+
+  .cardBeneficios {
+    gap: 5px;
+    width: 200px;
+    height: 250px;
+    padding: 30px 30px;
+  }
+
+  .titleBeneficios h3 {
+    font-size: 20px;
+  }
+  .descriptBeneficios p {
+    font-size: 14px;
+  }
+
+  /* ESPECIALISTA SECTION STYLE */
+
+  .sectionEspecialista {
+    padding: 0px 50px 30px 50px;
+    gap: 0px;
+    width: 100%;
+  }
+
+  .descriptSection {
+    gap: 15px;
+    width: 100%;
+  }
+
+  .titleEspecialista h3 {
+    font-size: 20px;
+  }
+
+  .descriptEspecialista {
+    font-size: 14px;
+  }
+
+  .sectionCtaImg img {
+    display: none;
+  }
+  .buttonEspecialista a {
+    font-size: 14px;
+  }
+  .buttonEspecialista a {
+    width: 200px;
   }
 }
