--- a/src/routes/Inicio/styles/services.css
+++ b/src/routes/Inicio/styles/services.css
@@ -174,3 +174,35 @@
     font-size: 18px;
   }
 }
+
+@media (max-width: 520px) {
+  .titleServices h2 {
+    font-size: 23px;
+    width: 300px;
+  }
+
+  .videoServices iframe {
+    width: 300px;
+    height: 165px;
+  }
+
+  .descriptVideo {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .descriptVideo p {
+    font-size: 14px;
+  }
+
+  .buttonForm {
+    margin-top: 10px;
+    width: 250px;
+    padding: 5px 10px;
+    border-radius: 8px;
+  }
+
+  .buttonForm a {
+    font-size: 14px;
+  }
+}
