--- a/src/routes/Inicio/styles/main.css
+++ b/src/routes/Inicio/styles/main.css
@@ -118,7 +118,7 @@
   }
 
   .contentMain {
-    height: 350px;
+    height: 250px;
   }
 
   .textTitle p {
@@ -129,10 +129,10 @@
 
   .title h1 {
     font-size: 16px;
+    width: 300px;
   }
 
   .routeAbout a {
-    margin-top: 10px;
-    font-size: 13px;
+    display: none;
   }
 }
