--- a/src/components/Footer/styles/footer.css
+++ b/src/components/Footer/styles/footer.css
@@ -105,3 +105,29 @@ footer {
     font-size: 16px;
   }
 }
+
+@media (max-width: 450px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .sectionOne {
+    display: flex;
+    gap: 10px;
+    flex-direction: column-reverse;
+  }
+  .sectionOne .logo img {
+    display: none;
+  }
+  .returnHome a {
+    font-size: 16px;
+  }
+  .sectionTwo p {
+    padding: 20px;
+    text-align: center;
+    border-top: solid 2px #fff;
+    width: 60%;
+    font-size: 12px;
+  }
+}
