--- a/src/components/Navbar/styles/navbar.css
+++ b/src/components/Navbar/styles/navbar.css
@@ -158,3 +158,22 @@ nav {
     border: none;
   }
 }
+
+@media (max-width: 450px) {
+  .menu {
+    width: 30px;
+  }
+  .navbar .logo img {
+    width: 180px;
+  }
+  .navigationMobile {
+    justify-content: center;
+  }
+
+  .navigationMobile ul {
+    margin: 0;
+    width: 100%;
+    border-radius: 0;
+    border: none;
+  }
+}
