--- a/src/components/Navbar/styles/navbar.css
+++ b/src/components/Navbar/styles/navbar.css
@@ -165,14 +165,41 @@ nav {
     background-color: transparent;
     width: 100%;
     justify-content: space-around;
-    height: 100px;
+    height: 60px;
     z-index: 1;
   }
   .menu {
-    width: 30px;
+    width: 25px;
   }
   .navbar .logo img {
     width: 180px;
+  }
+  .navigationMobile {
+    justify-content: center;
+  }
+
+  .navigationMobile ul {
+    margin: 0;
+    width: 100%;
+    border-radius: 0;
+    border: none;
+  }
+}
+
+@media (max-width: 415px) {
+  .navbar {
+    display: flex;
+    background-color: transparent;
+    width: 100%;
+    justify-content: space-around;
+    height: 60px;
+    z-index: 1;
+  }
+  .menu {
+    width: 25px;
+  }
+  .navbar .logo img {
+    width: 130px;
   }
   .navigationMobile {
     justify-content: center;
