--- a/src/components/Navbar/styles/navbar.css
+++ b/src/components/Navbar/styles/navbar.css
@@ -76,7 +76,7 @@ nav {
   justify-content: end;
   right: 0;
   width: 100%;
-  font-size: 20px;
+  font-size: 18px;
   position: absolute;
   z-index: 1000;
 }
@@ -149,6 +149,13 @@ nav {
   }
   .navigationMobile {
     justify-content: center;
+  }
+
+  .navigationMobile ul li a {
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 500;
+    color: #fff;
   }
 
   .navigationMobile ul {
